--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.28.4",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
